Read file contents as string to fix content length mismatch